--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"grunt-contrib-jshint": "0.10.0",
 		"grunt-contrib-uglify": "0.4.0",
 		"grunt-exec": "0.4.5",
-		"auidocjs": ">=0.0.6"
+		"auidocjs": ">=0.0.6",
+		"grunt-shell" : "1.1.1"
 	}
 }
