--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
 	"author": "NAVER corp",
 	"description": "Jindo Component",
 	"main": "dist/jindo-component.js",
+	"scripts" : {
+		"test" : "grunt test:*"
+	},
 	"homepage": "http://jindo.dev.naver.com/jindo_home/Component.html",
 	"repository": {
 		"type": "git",
@@ -23,7 +26,6 @@
 			"url": "https://www.gnu.org/licenses/old-licenses/lgpl-2.0.html"
 		}
 	],
-	"dependencies": {},
 	"devDependencies": {
 		"grunt": "0.4.5",
 		"grunt-contrib-qunit": "0.4.0",
